1.Implement header component 2.Remove useless web assets

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,10 @@
+content_article:
+    resource: "@ContentArticleBundle/Resources/config/routing.yml"
+    prefix:   /content
+
 fundamental_common:
     resource: "@FundamentalCommonBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /common
 
 app:
     resource: @AppBundle/Controller/
