1、Implement articlecontroller 2、remove acme bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ FundamentalCommonBundle ]
+    bundles:        [ FundamentalCommonBundle, ContentArticleBundle]
     #java: /usr/bin/java
     filters:
         less:
