--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,12 +42,12 @@ assetic:
              node_paths:  [/usr/lib/node_modules]
              apply_to:    "\.less$" 
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        yui_js:
-            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.8.jar"
-        yui_css:
-            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.8.jar"
+        uglifyjs2:
+            compress: true
+            mangle: true
+            bin: "%kernel.root_dir%/Resources/node_modules/.bin/uglifyjs"
+        uglifycss:  
+            bin: "%kernel.root_dir%/Resources/node_modules/.bin/uglifycss"  
     assets:
         bootstrap_css:
             inputs:
@@ -56,6 +56,7 @@ assetic:
             filters:
                 - less
                 - cssrewrite
+                - uglifycss
             output: css/bootstrap.css
         bootstrap_js:
             inputs:
@@ -72,18 +73,26 @@ assetic:
                 - %kernel.root_dir%/../vendor/twbs/bootstrap/js/tab.js
                 - %kernel.root_dir%/../vendor/twbs/bootstrap/js/affix.js
                 - %kernel.root_dir%/../vendor/braincrafted/bootstrap-bundle/Braincrafted/Bundle/BootstrapBundle/Resources/js/bc-bootstrap-collection.js
+            filters:
+                - uglifyjs2
             output: js/bootstrap.js
         jquery:
             inputs:
                 - %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.11.1.js
+            filters:
+                - uglifyjs2
             output: js/jquery.js
         hinclude:
             inputs:
                 - %kernel.root_dir%/../app/Resources/public/js/hinclude.js
+            filters:
+                - uglifyjs2
             output: js/hinclude.js
         common_css:
             inputs:
                 - %kernel.root_dir%/../app/Resources/public/css/common.css
+            filters:
+                - uglifycss
             output: css/common.css
 
 # Doctrine Configuration
