--- a/src/Content/UploadBundle/Resources/config/routing.yml
+++ b/src/Content/UploadBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-content_upload_homepage:
+content_upload_image:
     path:     /upload/image
     defaults: { _controller: ContentUploadBundle:Upload:uploadImage }
