--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "braincrafted/bootstrap-bundle": "~2.1",
         "twbs/bootstrap": "3.0.*",
         "jquery/jquery": "1.11.*",
-        "friendsofsymfony/user-bundle": "~1.3"
+        "friendsofsymfony/user-bundle": "~1.3",
+        "kartik-v/bootstrap-fileinput": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
