change validation of entity article;

--- a/src/Content/ArticleBundle/Resources/config/validation.yml
+++ b/src/Content/ArticleBundle/Resources/config/validation.yml
@@ -15,3 +15,5 @@ Content\ArticleBundle\Entity\Article:
             - NotBlank: ~
         content:
             - NotBlank: ~
+        tags:
+            - NotBlank: ~
