--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -160,3 +160,8 @@ braincrafted_bootstrap:
         variables_file: %kernel.root_dir%/Resources/less/variables.less
         bootstrap_output: %kernel.root_dir%/Resources/less/bootstrap.less
         bootstrap_template: BraincraftedBootstrapBundle:Bootstrap:bootstrap.less.twig
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: secured_area
+    user_class: Fundamental\AccountBundle\Entity\User
