--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,7 +8,11 @@ content_article:
 
 fundamental_common:
     resource: "@FundamentalCommonBundle/Resources/config/routing.yml"
-    prefix:   /common
+    prefix:   /
+    
+fundamental_user:
+    resource: "@AccountBundle/Resources/config/routing.yml"
+    prefix:   /
 
 app:
     resource: @AppBundle/Controller/
