--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -165,3 +165,12 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: secured_area
     user_class: Fundamental\AccountBundle\Entity\User
+    registration:
+        form:
+            type: account_user_registration
+    profile:
+        form:
+            type: account_user_profile
+    change_password:
+        form:
+            type: account_user_change_password
