--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,7 +33,7 @@ twig:
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
-    use_controller: false
+    use_controller: true
     bundles:        [ FundamentalCommonBundle, ContentArticleBundle]
     #java: /usr/bin/java
     filters:
